# ai-sci-feasible-designs

./: .env  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .ruff.toml  2025.11.20.689494v1.full.md  2407.04557v1.md  2506.08224v2.md  2506.19583v1.md  2511.02824v2.md  2511.04583v1.md  2511.08151v1.md  2511.08217v1.md  AGENTS.md  AGENTS_legacy.md  CLAUDE.md  CONTEXT.md  ConStellaration Fusion Challenge_ Benchmarks and Solution Strategies.md  GEMINI.md  Multi-agent-evolve_agent_structure.md  README.md  cca-swebench_agent_structure.md  cca-swebench_vs_tt_loop_comparison.md  conftest.py  input.test  pyproject.toml  pytest.ini  self_improving_coding_agent_agent_structure.md  verify_fixes.py
ai_scientist/: __init__.py  adapter.py  agent.py  auth_profile.py  budget_manager.py  config.py  consolidated_code.txt  constraints.py  coordinator.py  curriculum.py  cycle_executor.py  experiment_runner.py  experiment_setup.py  exploration.py  failure_taxonomy.py  fidelity_controller.py  forward_model.py  guards.py  llm_controller.py  local_gateway.py  memory.py  model_endpoint.py  model_provider.py  model_router_reward.py  novelty_gate.py  objective_types.py  p3_data_plane.py  p3_enqueue.py  planner.py  prefilter.py  problem_profiles.py  problems.py  prompts.py  pytree_guard.py  rag.py  rag_index.db  reporting.py  restart_runtime.py  restart_seed_selector.py  rl_env.py  (+8 more)
checkpoints/: smoke_test.pt
configs/: _tmp_p1_ab_agent.yaml  _tmp_p1_ab_aso_seed123.yaml  _tmp_p1_ab_det.yaml  _tmp_p1_ab_lockstep_agent_20260227T104235.yaml  _tmp_p1_ab_lockstep_det_20260227T104235.yaml  _tmp_p1_ab_strict_20260227T033415.yaml  _tmp_p1_ab_strict_nearaxis_20260227T033415.yaml  _tmp_p1_ab_strict_offline_20260227T033415.yaml  _tmp_p1_ab_strict_tree_agent_20260227T083218.yaml  _tmp_p1_ab_strict_tree_det_20260227T083218.yaml  benchmark_cold_start.yaml  experiment.example.yaml  experiment.p1.aso.yaml  experiment.p2.aso.yaml  experiment.p3.agent.yaml  experiment.p3.aso.yaml  experiment.p3.prod.yaml  experiment.yaml  model.codex_native_canary.yaml  model.yaml  run_presets.yaml  smoke_p1.yaml  smoke_v2.yaml
constraints/: ci.txt  constellaration_problem_ssot.json
docs/: AI_SCIENTIST_ASO_MIGRATION_PLAN.md  AI_SCIENTIST_AUTONOMY_PLAN.md  AI_SCIENTIST_DATASET_INTEGRATION_PLAN.md  AI_SCIENTIST_HYBRID_ARCHITECTURE_PLAN.md  AI_SCIENTIST_REDUCTION_PLAN.md  AI_SCIENTIST_UNIFIED_ROADMAP.md  AI_SCIENTIST_UPDATED_PLAN.md  AI_SCIENTIST_V2_ROADMAP.md  AI_SCIENTIST_V2_UPGRADE_PLAN.md  ASO_SURROGATE_PIPELINE_PLAN.md  ASO_V3_PLAN.md  ASO_V4_IMPLEMENTATION_GUIDE.md  CI_LOCAL.md  CODEBASE_VERIFICATION_REPORT.md  CODEX_NATIVE_SUBSCRIPTION_INTEGRATION.md  FEASIBLE_DESIGN_FACTORY.md  IMPLEMENTATION_BACKLOG.md  INFRASTRUCTURE_SETUP.md  INTEGRATED_EVOLUTION_PLAN_P1_P2_P3.md  MASTER_PLAN_AI_SCIENTIST.md  P1_SCORE_CHASE_NOTES.md  P3_SYSTEMATIC_LOOP_PLAN.md  P3_TMUX_RUNBOOK.md  PARETO_SORTING_ALGORITHMS.md  PHYSICS_BENCHMARK_ALIGNMENT_AUDIT.md  PLAN_CHECKLIST.md  QUAD_HYBRID_IMPLEMENTATION_GUIDE.md  QUAD_HYBRID_IMPLEMENTATION_PROMPTS.md  README.md  REPOSITORY_STRUCTURE_AND_FLOW.md  RESULTS.md  RL.md  SAS_ROADMAP.md  SCIENTIFIC_ML_CORRECTNESS_REVIEW_2025-12-13.md  STELLARFORGE_IMPLEMENTATION_PLAN.md  TASKS_CODEX_MINI.md  TESTING.md  TODO_AI_SCIENTIST_IMPROVEMENTS.md  TODO_AI_SCIENTIST_PHASE2.md  TODO_P1_Orchestration.md  (+8 more)
(+408 files in other folders)
