[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_scientist"
version = "0.1.0"
description = "AI Scientist for stellarator design optimization"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "jaxtyping>=0.2.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
]
ml = [
    "scikit-learn>=1.0.0",
    "pandas>=2.0.0",
    "joblib>=1.2.0",
]
optimization = [
    "pymoo>=0.6.0",
    "nevergrad>=0.5.0",
]
datasets = [
    "datasets>=2.0.0",
]
rl = [
    "gymnasium>=0.29.0",
]
full = [
    "ai_scientist[test,ml,optimization,datasets,rl]",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_scientist*"]
exclude = ["tests*", "constellaration*", "vmecpp*", "orchestration*"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]  # Enable pycodestyle errors, pyflakes, and isort
ignore = ["E402", "F722", "F821"]

[tool.ruff.per-file-ignores]
"ai_scientist/optim/surrogate_v2.py" = ["F722", "F821"]
"ai_scientist/optim/geometry.py" = ["F722", "F821"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
reportGeneralTypeIssues = false
reportUnboundVariable = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportAttributeAccessIssue = false
reportCallIssue = false
exclude = [
    "ai_scientist/optim/geometry.py",
    "ai_scientist/optim/surrogate_v2.py",
    "ai_scientist/optim/alm_bridge.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
